--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
-pulumi>=3.0.0,<4.0.0
+Arpeggio==2.0.2
+attrs==25.1.0
+debugpy==1.8.12
+dill==0.3.9
+exceptiongroup==1.2.2
+grpcio==1.66.2
+iniconfig==2.0.0
+packaging==24.2
+parver==0.5
+pluggy==1.5.0
+protobuf==4.25.6
+pulumi==3.152.0
+pulumi_docker==4.6.1
+pytest==8.3.4
+PyYAML==6.0.2
+semver==2.13.0
+six==1.17.0
+tomli==2.2.1
+typing_extensions==4.12.2
