--- a/.github/workflows/pulumi-ci.yml
+++ b/.github/workflows/pulumi-ci.yml
@@ -3,14 +3,14 @@ name: Pulumi CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # O pipeline será acionado sempre que houver um push na branch main
+      - main
   pull_request:
     branches:
-      - main  # O pipeline também pode ser acionado por pull requests para a branch main
+      - main
 
 jobs:
   test:
-    runs-on: ubuntu-latest  # Escolha o ambiente de execução (Ubuntu é comum)
+    runs-on: ubuntu-latest
 
     steps:
       # 1. Checkout do código
@@ -21,19 +21,19 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'  # Altere para a versão do Python que você está usando
+          python-version: '3.8'
 
       # 3. Instalar dependências do projeto
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Certifique-se de ter o arquivo requirements.txt no seu repositório
+          pip install -r requirements.txt
 
       # 4. Configurar Pulumi
       - name: Set up Pulumi
-        uses: pulumi/action@v3
+        uses: pulumi/actions/setup-pulumi@v3
         with:
-          pulumi_version: 'latest'  # Escolha a versão do Pulumi que deseja usar
+          pulumi_version: 'latest'  # Ou especifique a versão que você deseja
 
       # 5. Rodar os testes da infraestrutura
       - name: Run infrastructure tests
