--- a/.github/workflows/pulumi-ci.yml
+++ b/.github/workflows/pulumi-ci.yml
@@ -25,9 +25,7 @@ jobs:
 
       # 3. Instalar dependências do projeto
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Create Pulumi Stack
         run: pulumi stack init dev
