--- a/.github/workflows/pulumi-ci.yml
+++ b/.github/workflows/pulumi-ci.yml
@@ -23,13 +23,15 @@ jobs:
         with:
           python-version: '3.10.12'
 
+      - name: Set Pulumi access token
+        run: echo "PULUMI_ACCESS_TOKEN=${{ secrets.PULUMI_ACCESS_TOKEN }}" >> $GITHUB_ENV
+
       # 3. Instalar dependências do projeto
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pulumi
           pip install -r requirements.txt
-
+      
       - name: Create Pulumi Stack
         run: pulumi stack init dev
 
